file(GLOB GAME_SRC *.cpp *.c *.h)
if(IOS)
  file(GLOB IOS_SRC *.m)
  list(APPEND GAME_SRC ${IOS_SRC})
endif()

include_directories(../irrlicht/include)

if(ANDROID)
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY $ENV{APP_ROOT}/libs/armeabi)
  
  irrmob_add_library(game SHARED GAME_SRC)
  target_link_libraries(game irrlicht log GLESv1_CM GLESv2)
  add_dependencies(game irrlicht)
else()
  irrmob_add_executable(game GAME_SRC GAME_RES)
  if(WIN32)
    set(CMAKE_CXX_FLAGS "-D_IRR_STATIC_LIB_")
    target_link_libraries(game irrlicht opengl32 winmm)
  elseif(IOS)
    target_link_libraries(game irrlicht)
  elseif(APPLE)
    set(CMAKE_EXE_LINKER_FLAGS "-framework cocoa -framework carbon -framework opengl -framework IOKit")
	target_link_libraries(game irrlicht)
  else()
    target_link_libraries(game irrlicht X11 GL Xxf86vm)
  endif()
  add_dependencies(game irrlicht)
endif()
